added example for iswc tutorial